--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,10 +15,40 @@
     <string name="bottom_nav_absence">Absence</string>
     <string name="bottom_nav_account">Account</string>
     <string name="bottom_nav_settings">Settings</string>
+
     <string name="month_placeholder">Month</string>
-    <string name="date_placeholder">Date</string>
+    <string name="date_placeholder">__ November 2024</string>
     <string name="clock_placeholder">Clock</string>
     <string name="caption_attendance">Attendance</string>
+
     <string name="caption_checkOut">Check Out</string>
     <string name="caption_totalHours">Total Hours</string>
+    <string name="greetings_placeholder">Greetings</string>
+    <string name="username_placeholder">Username</string>
+
+    <string name="attendance_info">Early</string>
+    <string name="attendance_placeholder">Attendance</string>
+    <string name="clock_attendance">08:00</string>
+
+    <string name="checkout_placeholder">Checkout</string>
+    <string name="checkout_info">On Time</string>
+    <string name="clock_checkout">17:00</string>
+
+    <string name="absent_placeholder">Absent</string>
+    <string name="month_absent_info">November</string>
+    <string name="days_absent">2</string>
+    <string name="day_days_absent">Day/Days</string>
+    <string name="total_attended_placeholder">Total Attended</string>
+    <string name="month_total_attendance_info">November</string>
+    <string name="days_total_attended">15</string>
+
+    <string name="date_tableHeader">Date</string>
+    <string name="attendance_tableHeader">Attendance</string>
+    <string name="checkout_tableHeader">Checkout</string>
+    <string name="total_hours_tableHeader">Total Hours</string>
+
+    <string name="date_tableContent">6 November</string>
+    <string name="attendance_tableContent">08:00</string>
+    <string name="checkout_tableContent">17:00</string>
+    <string name="total_hours_tableContent">08:00</string>
 </resources>
