Menambahkan Splash Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="preview_selfie">Preview Selfie</string>
     <string name="attendance_history">Attendance History</string>
     <string name="title_analytics_fragment">Analytics For</string>
+    <string name="branding">Bersama aji, Gaji aman terkendali</string>
 </resources>
