--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,5 @@
     <string name="camera_button_placeholder">Go to Camera</string>
     <string name="button_rotate_camera">Rotasi kamera</string>
     <string name="button_capture">Ambil swafoto</string>
+    <string name="table_histori_kehadiran">Table Histori Kehadiran</string>
 </resources>
