--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,9 @@
     <string name="button_capture">Ambil swafoto</string>
     <string name="table_histori_kehadiran">Table Histori Kehadiran</string>
     <string name="scroll_analytics">Scroll analytics</string>
+    <string name="fee">Fee</string>
+    <string name="late">Late</string>
+    <string name="potongan">Potongan</string>
+    <string name="overtime">Overtime</string>
+    <string name="accumulated_fee">Accumulated Fee</string>
 </resources>
